--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -33,7 +33,7 @@ pre, code {
 
 /* 注释 */
 .code.highlighter-rouge .c {
-  color: #9E9E9E; /* 灰色 */
+  color: #FF9800; /* 橙色 */
   font-style: italic; /* 设置为斜体 */
 }
 
