--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -47,7 +47,7 @@ pre.highlight {
 }
 
 .highlight  { background: $oc-gray-0; }
-.highlight .c { color: #999988; font-style: italic } /* Comment */
+.highlight .c { color: #FFA500; font-style: italic } /* Comment */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
 .highlight .k { font-weight: bold } /* Keyword */
 .highlight .o { font-weight: bold } /* Operator */
