--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -32,7 +32,7 @@ pre, code {
 }
 
 /* 注释 */
-.code.highlighter-rouge .c {
+.code.highlighter-rouge .c1 {
   color: #FF9800; /* 橙色 */
   font-style: italic; /* 设置为斜体 */
 }
