--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -33,7 +33,7 @@ pre, code {
 
 /* 注释 */
 .code.highlighter-rouge .c1 {
-  color: #FF9800; /* 橙色 */
+  color: #8B0000; /* 橙色 */
   font-style: italic; /* 设置为斜体 */
 }
 
