--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   {% include head.html %}
+  <style>
+	.share_div{width:0px;height:0px;overflow:visible;}
+  </style>
+  <div class="share_div"><img src="/images/resized_image.png"></div>
   <body>
     {% include nav.html %}
 
