--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,10 +2,7 @@
 <html>
   {% include head.html %}
   <body>
-  <style>
-	.share_div{width:0px;height:0px;overflow:hidden;}
-  </style>
-  <div class="share_div"><img src="/images/resized_image.png"></div>
+    <div style="display:none;"><imgsrc="/images/resized_image.png" alt=""></div>
     {% include nav.html %}
 
     {% if page.toc==true %}
