--- a/_layouts/head.html
+++ b/_layouts/head.html
@@ -1,4 +1,5 @@
-  <script type="text/x-mathjax-config">
+<div style="display:none;"><img src="/images/resized_image.png" alt=""></div>
+<script type="text/x-mathjax-config">
     MathJax.Hub.Config({
       tex2jax: {
         skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
