--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   {% include head.html %}
+  <div style="display:none;"><img src="/images/resized_image.png" alt=""></div>
   <body>
     {% include nav.html %}
 
